; ModuleID = '/home/carl/AnghaBench/Atlas/lib/extr_lpeg.c_union_l.c'
source_filename = "/home/carl/AnghaBench/Atlas/lib/extr_lpeg.c_union_l.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i64 }

@IFail = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @union_l to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @union_l(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_7__*, align 8
  %7 = alloca %struct.TYPE_7__*, align 8
  %8 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  store i32 0, i32* %5, align 4
  %9 = load i32*, i32** %2, align 8
  %10 = call %struct.TYPE_7__* @getpatt(i32* %9, i32 1, i32* %3)
  store %struct.TYPE_7__* %10, %struct.TYPE_7__** %6, align 8
  %11 = load i32*, i32** %2, align 8
  %12 = call %struct.TYPE_7__* @getpatt(i32* %11, i32 2, i32* %4)
  store %struct.TYPE_7__* %12, %struct.TYPE_7__** %7, align 8
  %13 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %14 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load i64, i64* @IFail, align 8
  %18 = icmp eq i64 %16, %17
  br i1 %18, label %19, label %22

19:                                               ; preds = %1
  %20 = load i32*, i32** %2, align 8
  %21 = call i32 @lua_pushvalue(i32* %20, i32 2)
  br label %41

22:                                               ; preds = %1
  %23 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %24 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %23, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = load i64, i64* @IFail, align 8
  %28 = icmp eq i64 %26, %27
  br i1 %28, label %29, label %32

29:                                               ; preds = %22
  %30 = load i32*, i32** %2, align 8
  %31 = call i32 @lua_pushvalue(i32* %30, i32 1)
  br label %40

32:                                               ; preds = %22
  %33 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %34 = call i32 @tocharset(%struct.TYPE_7__* %33, i32* %8)
  %35 = load i32*, i32** %2, align 8
  %36 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %37 = load i32, i32* %3, align 4
  %38 = load i32, i32* %4, align 4
  %39 = call i32 @separateparts(i32* %35, %struct.TYPE_7__* %36, i32 %37, i32 %38, i32* %5, i32* %8)
  br label %40

40:                                               ; preds = %32, %29
  br label %41

41:                                               ; preds = %40, %19
  ret i32 1
}

declare dso_local %struct.TYPE_7__* @getpatt(i32*, i32, i32*) #1

declare dso_local i32 @lua_pushvalue(i32*, i32) #1

declare dso_local i32 @tocharset(%struct.TYPE_7__*, i32*) #1

declare dso_local i32 @separateparts(i32*, %struct.TYPE_7__*, i32, i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
